--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     box-sizing: border-box;
-  font-family: 'Open Sans','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration: none;
     list-style: none;
 }
