--- a/src/components/css/container.css
+++ b/src/components/css/container.css
@@ -6,7 +6,7 @@
     display: flex;
     overflow: auto;
     width: 1700px;
-    height: 618px;
+    height: 100%;
     justify-content: center;
     flex-wrap: wrap;
     background-color: #202124;
